# internal/responseTypes/user.go
@@ -1,0 +1,11 @@
+package responseTypes
+
+import (
+	"github.com/google/uuid"
+)
+
+type UserResponse struct {
+	ID    uuid.UUID `json:"id"`
+	Name  string    `json:"name"`
+	Email string    `json:"email"`
+}
